--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/BellaVita_Clone/src/assets/FavIcon/favIcon.jpg" />
+    <link
+      href="https://db.onlinewebfonts.com/c/6138beb83221f6eb46ed08543a304d1d?family=Twentieth+Century"
+      rel="stylesheet"
+    />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Buy Luxury Perfumes for Men & Women - BellaVita</title>
   </head>
   <body>
     <div id="root"></div>
