--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/BellaVita_Clone/src/assets/FavIcon/favIcon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/favIcon.jpg" />
     <link
       href="https://db.onlinewebfonts.com/c/6138beb83221f6eb46ed08543a304d1d?family=Twentieth+Century"
       rel="stylesheet"
