--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favIcon.jpg" />
-    <link
+    <!-- <link
       href="https://db.onlinewebfonts.com/c/6138beb83221f6eb46ed08543a304d1d?family=Twentieth+Century"
       rel="stylesheet"
-    />
+    /> -->
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buy Luxury Perfumes for Men & Women - BellaVita</title>
